//
//  MVINotesShared.swift
//  MVINotesShared
//
//  Created by Phrakonkham Sengpraseuth on 2026. 03. 18..
//

import Foundation

public enum AccessibilityIds {
    public enum NoteListViewIds: String {
        case newNoteButton = "NewNoteButton"
    }
    
    public enum NoteViewIds: String {
        case titleTextField = "TitleTextField"
        case saveButton = "SaveButton"
    }
}
